5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1706_3036.log
== TEST (2019-04-29 18:49:38) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1) or (x>=1):
	print(round(x, 2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(round(1, 2))
elif(x==0)
	print(round(2, 2))
	
-- ERROR:
File "XXXX", line 6
    elif(x==0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:49:46) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1) or (x>=1):
	print(round(x, 2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(round(1, 2))
elif(x==0):
	print(round(2, 2))
	
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:49:53) 
-- CODE:
x=float(input("valor de x: "))
if(x<=-1) or (x>=1):
	print(round(x, 2))
elif(-1<x) and (x<0) or (0<x) and (x<1):
	print(round(1, 2))
elif(x==0):
	print(round(2, 2))
	
-- EXECUTION TIME:
0.156274
-- TEST CASE 1:
---- input:
-0.59
---- correct output:
1
---- user output:
1
-- TEST CASE 2:
---- input:
0.99
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
-1.01
---- correct output:
-1.01
---- user output:
-1.01
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
